[project]
name = "perceval-sim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "perceval-quandela>=0.13.2",
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.0",
    "matplotlib>=3.8",
    "seaborn>=0.13.2",
    "tqdm>=4.66",
]
